--- a/AcsStatsWeb/ClientApp/src/app/modules/batting-records/components/get-batting-records/get-batting-records.component.html
+++ b/AcsStatsWeb/ClientApp/src/app/modules/batting-records/components/get-batting-records/get-batting-records.component.html
@@ -1,4 +1,4 @@
-<app-records-header name="batting"></app-records-header>
+<app-records-search-header name="batting"></app-records-search-header>
 <form (ngSubmit)="find()" [formGroup]="battingRecordsForm">
   <div class="batting-record">
     <app-search-header class="selectrow app-search" [parentFormGroup]="battingRecordsForm"
