--- a/AcsStatsWeb/ClientApp/src/app/modules/bowling-records/components/get-bowling-records/get-bowling-records.component.html
+++ b/AcsStatsWeb/ClientApp/src/app/modules/bowling-records/components/get-bowling-records/get-bowling-records.component.html
@@ -1,4 +1,4 @@
-<app-records-header name="bowling"></app-records-header>
+<app-records-search-header name="bowling"></app-records-search-header>
 <form (ngSubmit)="find()" [formGroup]="bowlingRecordsForm">
   <div class="bowling-record">
     <app-search-header class="selectrow app-search" [parentFormGroup]="bowlingRecordsForm"
