--- a/AcsStatsWeb/ClientApp/src/app/modules/batting-records/components/batting-inn-by-inn/batting-inn-by-inn.component.html
+++ b/AcsStatsWeb/ClientApp/src/app/modules/batting-records/components/batting-inn-by-inn/batting-inn-by-inn.component.html
@@ -1,10 +1,12 @@
 <h2>Innings By Innings</h2>
 
-<h3>{{(battingSummary$ | async)?.team}} v {{(battingSummary$ | async)?.opponents}}
-  at {{(battingSummary$ | async)?.ground}}
-  in {{(battingSummary$ | async)?.hostCountry}}
-  at {{venue}}
-  for {{(battingSummary$ | async)?.matchType}} </h3>
+<app-records-header [venue]="venue" [recordSummary$]="battingSummary$"
+                    [pageSize]="pageSize" [totalItems]="count" [currentPage]="currentPage"
+                    [returnUrl]="'/records/batting'"
+                    (first)="navigate(0)"
+                    (previous)="navigate($event)" (next)="navigate($event)" (last)="navigate($event)"
+                    (goto)="navigate($event)">
+</app-records-header>
 
 <table class="table table-striped table-hover table-sm">
   <thead class="thead-dark">
@@ -92,4 +94,7 @@
   </tbody>
 </table>
 
-<app-paging [pageSize]="pageSize"  [totalItems]="count" [currentPage]="currentPage" (first)="navigate(0)" (previous)="navigate($event)" (next)="navigate($event)" (last)="navigate($event)" (goto)="navigate($event)"></app-paging>
+<app-records-footer [pageSize]="pageSize" [totalItems]="count" [currentPage]="currentPage"
+                    (first)="navigate(0)" (previous)="navigate($event)" (next)="navigate($event)"
+                    (last)="navigate($event)"
+                    (goto)="navigate($event)"></app-records-footer>
