--- a/AcsStatsWeb/ClientApp/src/app/modules/bowling-records/components/by-opposition/by-opposition.component.html
+++ b/AcsStatsWeb/ClientApp/src/app/modules/bowling-records/components/by-opposition/by-opposition.component.html
@@ -1,11 +1,12 @@
 <h2>By Opposition Figures</h2>
 
-<h3>{{(bowlingSummary$ | async)?.team}} v {{(bowlingSummary$ | async)?.opponents}}
-  at {{(bowlingSummary$ | async)?.ground}}
-  in {{(bowlingSummary$ | async)?.hostCountry}}
-  at {{venue}}
-  for {{(bowlingSummary$ | async)?.matchType}} </h3>
-
+<app-records-header [venue]="venue" [recordSummary$]="bowlingSummary$"
+                    [pageSize]="pageSize" [totalItems]="count" [currentPage]="currentPage"
+                    [returnUrl]="'/records/bowling'"
+                    (first)="navigate(0)"
+                    (previous)="navigate($event)" (next)="navigate($event)" (last)="navigate($event)"
+                    (goto)="navigate($event)">
+</app-records-header>
 
 <table class="table table-striped table-hover table-sm">
   <thead class="thead-dark">
@@ -121,6 +122,7 @@
   </tbody>
 </table>
 
-<app-paging [pageSize]="pageSize" [totalItems]="count" [currentPage]="currentPage" (first)="navigate(0)"
-            (previous)="navigate($event)" (next)="navigate($event)" (last)="navigate($event)"
-            (goto)="navigate($event)"></app-paging>
+<app-records-footer [pageSize]="pageSize" [totalItems]="count" [currentPage]="currentPage"
+                    (first)="navigate(0)" (previous)="navigate($event)" (next)="navigate($event)"
+                    (last)="navigate($event)"
+                    (goto)="navigate($event)"></app-records-footer>
