--- a/AcsStatsWeb/ClientApp/src/app/modules/bowling-records/components/match-totals/match-totals.component.html
+++ b/AcsStatsWeb/ClientApp/src/app/modules/bowling-records/components/match-totals/match-totals.component.html
@@ -1,11 +1,12 @@
 <h2>By Match Figures</h2>
 
-<h3>{{(bowlingSummary$ | async)?.team}} v {{(bowlingSummary$ | async)?.opponents}}
-  at {{(bowlingSummary$ | async)?.ground}}
-  in {{(bowlingSummary$ | async)?.hostCountry}}
-  at {{venue}}
-  for {{(bowlingSummary$ | async)?.matchType}} </h3>
-
+<app-records-header [venue]="venue" [recordSummary$]="bowlingSummary$"
+                    [pageSize]="pageSize" [totalItems]="count" [currentPage]="currentPage"
+                    [returnUrl]="'/records/bowling'"
+                    (first)="navigate(0)"
+                    (previous)="navigate($event)" (next)="navigate($event)" (last)="navigate($event)"
+                    (goto)="navigate($event)">
+</app-records-header>
 
 <table class="table table-striped table-hover table-sm">
   <thead class="thead-dark">
@@ -74,3 +75,8 @@
   </tr>
   </tbody>
 </table>
+
+<app-records-footer [pageSize]="pageSize" [totalItems]="count" [currentPage]="currentPage"
+                    (first)="navigate(0)" (previous)="navigate($event)" (next)="navigate($event)"
+                    (last)="navigate($event)"
+                    (goto)="navigate($event)"></app-records-footer>
