--- a/AcsStatsWeb/ClientApp/src/app/modules/shared/components/paging/paging.component.css
+++ b/AcsStatsWeb/ClientApp/src/app/modules/shared/components/paging/paging.component.css
@@ -1,12 +1,34 @@
-nav div input {
+nav > div > input {
   max-width: 3rem;
   max-height: 1.5rem;
+}
+
+nav > ul  {
+  list-style: none;
+  display: flex;
+  padding-left: 0;
+}
+
+nav > ul > li {
+  display: inline-block;
+}
+
+nav > ul > input {
+  max-width: 3rem;
+  max-height: 1.5rem;
+}
+
+button {
+  background-color: rgb(33, 97, 4);
+  color: white;
+  margin-left: -6px;
+  padding: 0.375rem .75rem;
 }
 
 /* todo: media query this */
 .page-container {
   display: grid;
-  grid-template-columns: 8rem 15rem repeat(4, 6rem) 10rem auto;
+  grid-template-columns: 8rem 15rem auto 10rem;
   column-gap: 2rem;
 }
 
@@ -14,10 +36,32 @@ nav div input {
   cursor: pointer;
 }
 
-.button {
-  margin: 0 0.3rem 0 0.3rem;
-  border: 1px solid silver;
-  border-radius: 0.25em;
+.item {
+  position: relative;
+  display: block;
+  border-top: none;
+  border-bottom: none;
+  border-left: 1px solid  rgb(25, 73, 32);
+  border-right: 1px solid  rgb(25, 73, 32);
+}
+
+.item-left {
+  border-radius: 3px 0 0 3px;
+}
+
+.item-right {
+  border-radius: 0 3px 3px 0;
+}
+
+.item-disabled {
+  background-color: rgba(33, 97, 4, 50%);
+  color: lightgray;
+  border-left: 1px solid  rgba(25, 73, 32, 50%);
+  border-right: 1px solid  rgba(25, 73, 32, 50%);
+}
+
+.item-goto {
+  padding-top: 0.25rem;
 }
 
 .button-right {
@@ -32,4 +76,12 @@ nav div input {
 
 .hidePage {
   display: none;
+}
+.page-information, .item-information {
+  padding-top: 0.4rem;
+}
+
+.page-information > span, .item-information > span {
+  font-weight: bold;
+  padding-left: 0;
 }
