Fixed some bugs and added UI updates

--- a/AcsStatsWeb/ClientApp/src/app/components/home/home.component.html
+++ b/AcsStatsWeb/ClientApp/src/app/components/home/home.component.html
@@ -3,8 +3,8 @@
   <ul>
     <li><a [routerLink]="['records/batting']">Batting Records</a></li>
     <li><a [routerLink]="['records/bowling']">Bowling Records</a></li>
-    <li><a [routerLink]="['scorecard/bydecade/women']">Archive</a></li>
-    <li><a [routerLink]="['search/card/women']">Search For Women's Scorecard</a></li>
-    <li><a [routerLink]="['search/player/women']">Search For Player</a></li>
+<!--    <li><a [routerLink]="['scorecard/bydecade/women']">Archive</a></li>-->
+<!--    <li><a [routerLink]="['search/card/women']">Search For Women's Scorecard</a></li>-->
+<!--    <li><a [routerLink]="['search/player/women']">Search For Player</a></li>-->
   </ul>
 </div>
