--- a/AcsStatsWeb/ClientApp/src/app/modules/shared/components/records-main-nav/records-main-nav.component.html
+++ b/AcsStatsWeb/ClientApp/src/app/modules/shared/components/records-main-nav/records-main-nav.component.html
@@ -9,6 +9,6 @@
                 (previous)="raisePrevious($event)" (next)="raiseNext($event)" (last)="raiseLast($event)"></app-paging>
   </div>
   <div class="return">
-    <a [routerLink]="[returnUrl]">Return to query menu</a>
+    <a [routerLink]="[returnUrl]">Return to main form</a>
   </div>
 </div>
