--- a/AcsStatsWeb/ClientApp/src/app/modules/batting-records/components/batting-inn-by-inn/batting-inn-by-inn.component.html
+++ b/AcsStatsWeb/ClientApp/src/app/modules/batting-records/components/batting-inn-by-inn/batting-inn-by-inn.component.html
@@ -11,6 +11,7 @@
 <table class="table table-striped table-hover table-sm">
   <thead class="thead-dark">
   <tr>
+    <th></th>
     <th>
       <a (click)="sort(importedSortOrder.name)" class="btn text-left">Name
         <fa-icon *ngIf="importedSortOrder.name == sortOrder" [icon]="getSortClass(importedSortOrder.name)"></fa-icon>
@@ -77,7 +78,8 @@
   </tr>
   </thead>
   <tbody>
-  <tr *ngFor="let row of (battingInnByInn$ | async)?.sqlResults?.data">
+  <tr *ngFor="let row of (battingInnByInn$ | async)?.sqlResults?.data; index as ndx;">
+    <td>{{getIndex(ndx)}}</td>
     <td class="text-left" nowrap="nowrap">{{row.fullName}}</td>
     <td class="text-left" nowrap="nowrap">{{row.team}}</td>
     <td class="text-right" nowrap="nowrap" [innerHTML]="formatHighestScore(row)"></td>
