--- a/AcsStatsWeb/ClientApp/src/app/modules/batting-records/components/batting-overall/batting-overall.component.html
+++ b/AcsStatsWeb/ClientApp/src/app/modules/batting-records/components/batting-overall/batting-overall.component.html
@@ -12,10 +12,15 @@
 <table class="table table-striped table-hover table-sm">
   <thead class="thead-dark">
   <tr>
+    <th></th>
     <th class="text-left">
       <a (click)="sort(importedSortOrder.name)" class="btn btn-link">Name
         <fa-icon *ngIf="importedSortOrder.name == sortOrder" [icon]="getSortClass(importedSortOrder.name)"></fa-icon>
       </a>
+    </th>
+    <th class="text-left">
+      <a (click)="sort(importedSortOrder.team)" class="btn btn-link">Team
+        <fa-icon *ngIf="importedSortOrder.team == sortOrder" [icon]="getSortClass(importedSortOrder.team)"></fa-icon></a>
     </th>
     <th class="text-right">
       <a (click)="sort(importedSortOrder.matches)" class="btn btn-link">M
@@ -90,7 +95,7 @@
     </th>
     <th class="text-right">
       <a (click)="sort(importedSortOrder.battingImpact)" class="me-1 btn btn-link" cTooltip="Batting Impact"
-         cTooltipPlacement="top">BI
+         cTooltipPlacement="top">BtI
         <fa-icon *ngIf="importedSortOrder.battingImpact == sortOrder"
                  [icon]="getSortClass(importedSortOrder.battingImpact)"></fa-icon>
       </a>
@@ -98,8 +103,13 @@
   </tr>
   </thead>
   <tbody>
-  <tr *ngFor="let row of (battingOverall$ | async)?.sqlResults?.data">
+  <tr *ngFor="let row of (battingOverall$ | async)?.sqlResults?.data; index as ndx;">
+    <td>{{getIndex(ndx)}}</td>
     <td class="text-left" nowrap="nowrap">{{row.name}}</td>
+    <td class="text-left" nowrap="nowrap">
+          <span class="text-left ellipsed-cell me-1" [cPopoverTrigger]="'hover'" cPopover="{{row.team}}"
+                cPopoverPlacement="top">{{row.team}}</span>
+    </td>
     <td class="text-right" nowrap="nowrap">{{row.matches}}</td>
     <td class="text-right" nowrap="nowrap">{{row.innings == null ? "-" : row.innings}}</td>
     <td class="text-right" nowrap="nowrap">{{row.notOuts}}</td>
