--- a/AcsStatsWeb/ClientApp/src/app/modules/batting-records/components/ground-averages/ground-averages.component.html
+++ b/AcsStatsWeb/ClientApp/src/app/modules/batting-records/components/ground-averages/ground-averages.component.html
@@ -12,6 +12,7 @@
 <table class="table table-striped table-hover table-sm">
   <thead class="thead-dark">
   <tr>
+    <th></th>
     <th class="text-left">
       <a (click)="sort(importedSortOrder.name)" class="btn btn-link">Name
         <fa-icon *ngIf="importedSortOrder.name == sortOrder" [icon]="getSortClass(importedSortOrder.name)"></fa-icon>
@@ -101,7 +102,7 @@
     </th>
     <th class="text-right">
       <a (click)="sort(importedSortOrder.battingImpact)" class="me-1 btn btn-link" cTooltip="Batting Impact"
-         cTooltipPlacement="top">BI
+         cTooltipPlacement="top">BtI
         <fa-icon *ngIf="importedSortOrder.battingImpact == sortOrder"
                  [icon]="getSortClass(importedSortOrder.battingImpact)"></fa-icon>
       </a>
@@ -109,7 +110,8 @@
   </tr>
   </thead>
   <tbody>
-  <tr *ngFor="let row of (battingByGround$ | async)?.sqlResults?.data">
+  <tr *ngFor="let row of (battingByGround$ | async)?.sqlResults?.data; index as ndx;">
+    <td>{{getIndex(ndx)}}</td>
     <td class="text-left" nowrap="nowrap">{{row.name}}</td>
     <td class="text-left" nowrap="nowrap">
           <span class="text-left ellipsed-cell me-1" [cPopoverTrigger]="'hover'" cPopover="{{row.team}}"
