--- a/AcsStatsWeb/ClientApp/src/app/modules/batting-records/components/match-totals/match-totals.component.html
+++ b/AcsStatsWeb/ClientApp/src/app/modules/batting-records/components/match-totals/match-totals.component.html
@@ -12,6 +12,7 @@
 <table class="table table-striped table-hover table-sm">
   <thead class="thead-dark">
   <tr>
+    <th></th>
     <th>
       <a (click)="sort(importedSortOrder.name)" class="btn text-left">Name
         <fa-icon *ngIf="importedSortOrder.name == sortOrder" [icon]="getSortClass(importedSortOrder.name)"></fa-icon>
@@ -81,7 +82,8 @@
   </tr>
   </thead>
   <tbody>
-  <tr *ngFor="let row of (battingByMatch$ | async)?.sqlResults?.data">
+  <tr *ngFor="let row of (battingByMatch$ | async)?.sqlResults?.data; index as ndx;">
+    <td>{{getIndex(ndx)}}</td>
     <td class="text-left" nowrap="nowrap">{{row.fullName}}</td>
     <td class="text-left" nowrap="nowrap">{{row.team}}</td>
     <td class="text-right" nowrap="nowrap">{{row.bat1}}</td>
