--- a/AcsStatsWeb/ClientApp/src/app/modules/batting-records/components/series-averages/series-averages.component.html
+++ b/AcsStatsWeb/ClientApp/src/app/modules/batting-records/components/series-averages/series-averages.component.html
@@ -12,6 +12,7 @@
 <table class="table table-striped table-hover table-sm">
   <thead class="thead-dark">
   <tr>
+    <th></th>
     <th class="text-left">
       <a (click)="sort(importedSortOrder.name)" class="btn btn-link">Name <fa-icon *ngIf="importedSortOrder.name == sortOrder" [icon]="getSortClass(importedSortOrder.name)"></fa-icon></a>
     </th>
@@ -67,7 +68,8 @@
   </tr>
   </thead>
   <tbody>
-  <tr *ngFor="let row of (battingBySeries$ | async)?.sqlResults?.data">
+  <tr *ngFor="let row of (battingBySeries$ | async)?.sqlResults?.data; index as ndx;">
+    <td>{{getIndex(ndx)}}</td>
     <td class="text-left" nowrap="nowrap">{{row.name}}</td>
     <td class="text-left" nowrap="nowrap">
           <span class="text-left ellipsed-cell me-1" [cPopoverTrigger]="'hover'" cPopover="{{row.team}}"
