--- a/AcsStatsWeb/ClientApp/src/app/modules/bowling-records/components/bowling-inn-by-inn/bowling-inn-by-inn.component.html
+++ b/AcsStatsWeb/ClientApp/src/app/modules/bowling-records/components/bowling-inn-by-inn/bowling-inn-by-inn.component.html
@@ -11,6 +11,7 @@
 <table class="table table-striped table-hover table-sm">
   <thead class="thead-dark">
   <tr>
+    <th></th>
     <th class="text-left">
       <a (click)="sort(importedSortOrder.name)" class="btn btn-link text-left">Name
         <fa-icon *ngIf="importedSortOrder.name == sortOrder" [icon]="getSortClass(importedSortOrder.name)"></fa-icon></a>
@@ -63,7 +64,8 @@
   </tr>
   </thead>
   <tbody>
-  <tr *ngFor="let row of (bowlingInnByInn$ | async)?.sqlResults?.data">
+  <tr *ngFor="let row of (bowlingInnByInn$ | async)?.sqlResults?.data; index as ndx;">
+    <td>{{getIndex(ndx)}}</td>
     <td class="text-left" nowrap="nowrap">{{row.fullName}}</td>
     <td class="text-left" nowrap="nowrap">{{row.team}}</td>
     <td class="text-left" nowrap="nowrap">{{row.opponents}}</td>
