--- a/AcsStatsWeb/ClientApp/src/app/modules/bowling-records/components/by-year-of-match-start/by-year-of-match-start.component.html
+++ b/AcsStatsWeb/ClientApp/src/app/modules/bowling-records/components/by-year-of-match-start/by-year-of-match-start.component.html
@@ -11,6 +11,7 @@
 <table class="table table-striped table-hover table-sm">
   <thead class="thead-dark">
   <tr>
+    <th></th>
     <th class="text-left">
       <a (click)="sort(importedSortOrder.name)" class="btn btn-link">Name
         <fa-icon *ngIf="importedSortOrder.name == sortOrder" [icon]="getSortClass(importedSortOrder.name)"></fa-icon></a>
@@ -76,7 +77,7 @@
         <fa-icon *ngIf="importedSortOrder.sixes == sortOrder" [icon]="getSortClass(importedSortOrder.sixes)"></fa-icon></a>
     </th>
     <th class="text-right">
-      <a (click)="sort(importedSortOrder.battingImpact)" class="me-1 btn btn-link" cTooltip="Bowling Impact" cTooltipPlacement="top" >BI
+      <a (click)="sort(importedSortOrder.battingImpact)" class="me-1 btn btn-link" cTooltip="Bowling Impact" cTooltipPlacement="top" >BwI
         <fa-icon *ngIf="importedSortOrder.battingImpact == sortOrder"
                  [icon]="getSortClass(importedSortOrder.battingImpact)"></fa-icon>
       </a>
@@ -90,7 +91,8 @@
   </tr>
   </thead>
   <tbody>
-  <tr *ngFor="let row of (bowlingStore$ | async)?.sqlResults?.data">
+  <tr *ngFor="let row of (bowlingStore$ | async)?.sqlResults?.data; index as ndx;">
+    <td>{{getIndex(ndx)}}</td>
     <td class="text-left" nowrap="nowrap">{{row.name}}</td>
     <td class="text-right" nowrap="nowrap">{{row.matches}}</td>
     <td class="text-right" nowrap="nowrap">{{row.innings == null ? "-" : row.innings}}</td>
