--- a/AcsStatsWeb/ClientApp/src/app/modules/bowling-records/components/series-averages/series-averages.component.html
+++ b/AcsStatsWeb/ClientApp/src/app/modules/bowling-records/components/series-averages/series-averages.component.html
@@ -11,6 +11,7 @@
 <table class="table table-striped table-hover table-sm">
   <thead class="thead-dark">
   <tr>
+    <th></th>
     <th class="text-left">
       <a (click)="sort(importedSortOrder.name)" class="btn btn-link">Name
         <fa-icon *ngIf="importedSortOrder.name == sortOrder" [icon]="getSortClass(importedSortOrder.name)"></fa-icon></a>
@@ -78,7 +79,8 @@
   </tr>
   </thead>
   <tbody>
-  <tr *ngFor="let row of (bowlingSeries$ | async)?.sqlResults?.data">
+  <tr *ngFor="let row of (bowlingSeries$ | async)?.sqlResults?.data; index as ndx;">
+    <td>{{getIndex(ndx)}}</td>
     <td class="text-left" nowrap="nowrap">{{row.name}}</td>
     <td class="text-right" nowrap="nowrap">{{row.matches}}</td>
     <td class="text-right" nowrap="nowrap">{{row.innings == null ? "-" : row.innings}}</td>
