Added 'reset' to the bowling records form

--- a/AcsStatsWeb/ClientApp/src/app/modules/bowling-records/components/get-bowling-records/get-bowling-records.component.html
+++ b/AcsStatsWeb/ClientApp/src/app/modules/bowling-records/components/get-bowling-records/get-bowling-records.component.html
@@ -184,7 +184,7 @@
       <input type="submit" name="submit" id="submit"/>
     </div>
     <div class="buttons" id="buttons-reset">
-      <input type="button" name="reset" id="reset" value="Reset"/>
+      <input type="button" name="reset" id="reset" value="Reset" (click)="reset()"/>
     </div>
   </div>
 </form>
