--- a/AcsStatsWeb/ClientApp/src/app/modules/batting-records/components/get-batting-records/get-batting-records.component.css
+++ b/AcsStatsWeb/ClientApp/src/app/modules/batting-records/components/get-batting-records/get-batting-records.component.css
@@ -1,49 +1,178 @@
 .batting-record {
   display: grid;
-  grid: auto-flow min-content/repeat(12, 1fr);
+  grid-template-columns: 1fr 3fr;
   gap: 1rem;
-  row-gap: 1.5rem ;
+  row-gap: 1.5rem;
   margin: 1rem;
 }
 
-#batting-record-limit {
-  grid-column-start: 4;
-  grid-column-end: span 2;
-}
-.record-search-header {
-  grid-row-start: 1;
-  grid-column-start: 1;
-  grid-column-end: -1;
-}
+/*.filter-row {*/
+/*  grid-row: 2;*/
+/*  grid-column: 1/-1;*/
+/*}*/
 
-#batting-record-limit {
-  grid-column-start: 6;
-}
+/*#batting-record-limit {*/
+/*  grid-column-end: span 2;*/
+/*}*/
+/*.record-search-header {*/
+/*  grid-row: 1;*/
+/*  grid-column: 1/-1;*/
+/*}*/
 
-.teamrow {
-  grid-row-start: 3;
-}
+/*.teamrow {*/
+/*  grid-row: 3;*/
+/*}*/
 
-#batting-record-team-label {
-  grid-column-start: 1;
-}
+/*#batting-record-team-label {*/
+/*  grid-column: 1;*/
+/*}*/
 
-#batting-record-teams {
-  grid-column-start: 2;
-  grid-column-end: span 2;
-}
+/*#batting-record-teams {*/
+/*  grid-column: 2/ span 2;*/
+/*}*/
 
-#batting-record-opposition-label {
-  grid-column-start: 5;
-}
+/*#batting-record-opposition-label {*/
+/*  grid-column: 5;*/
+/*}*/
 
-#batting-record-opposition {
-  grid-column-start: 6;
-  grid-column-end: span 2;
-}
+/*#batting-record-opposition {*/
+/*  grid-column: 6/ span 2;*/
+/*}*/
 
-.homeoraway-row {
-  grid-row-start: 4;
+/*.homeoraway-row {*/
+/*  grid-row: 4;*/
+/*}*/
+
+/*#homeoraway-value label {*/
+/*  padding-left: 15px;*/
+/*  padding-right: 5px;*/
+/*}*/
+
+/*#homeoraway-value label:nth-child(1) {*/
+/*  padding-left: 0px;*/
+/*}*/
+
+/*#homeoraway-label {*/
+/*  grid-column: 1;*/
+/*}*/
+
+/*#homeoraway-value {*/
+/*  grid-column: 2/ span 7;*/
+/*}*/
+
+/*.country-ground-row {*/
+/*  grid-row: 5;*/
+/*}*/
+
+/*#batting-record-homeaway-label {*/
+/*  grid-column-end: span 1;*/
+/*}*/
+
+/*#batting-record-homeaway {*/
+/*  grid-column-end: span 2;*/
+/*}*/
+
+/*#batting-record-country-grounds-label {*/
+/*  grid-column: 5;*/
+/*}*/
+
+
+/*#batting-record-country-grounds {*/
+/*  grid-column: 6/ span 2;*/
+/*}*/
+
+/*.daterange {*/
+/*  grid-row: 6;*/
+/*  align-self: center;*/
+/*}*/
+
+/*#daterange-label {*/
+/*  grid-column-end: span 1;*/
+/*}*/
+
+/*#startdate-label > label, #enddate-label > label {*/
+/*  !*padding-top: 5px;*!*/
+/*}*/
+
+/*#startdate > input, #enddate > input {*/
+/*  padding-bottom: 5px;*/
+/*}*/
+
+/*#startdate-label {*/
+/*  grid-column-end: span 1;*/
+/*}*/
+
+/*#startdate {*/
+/*  grid-column-end: span 2;*/
+/*}*/
+
+/*#enddate-label {*/
+/*  grid-column-end: span 1;*/
+/*}*/
+
+/*#enddate {*/
+/*  grid-column-end: span 2;*/
+/*}*/
+
+/*.season {*/
+/*  grid-row: 7;*/
+/*}*/
+
+/*#season-label {*/
+/*  grid-column-end: span 1;*/
+/*}*/
+
+/*#season-value {*/
+/*  grid-column-end: span 2;*/
+/*}*/
+
+/*.result {*/
+/*  grid-row: 8;*/
+/*}*/
+
+/*.result label {*/
+/*  padding-left: 5px;*/
+/*  padding-right: 15px;*/
+/*}*/
+
+/*.result label:nth-child(1) {*/
+/*}*/
+
+
+/*#result-label {*/
+/*  grid-column-end: span 1;*/
+/*}*/
+
+/*#result-value {*/
+/*  grid-column-end: span 7;*/
+/*}*/
+
+/*.view-format {*/
+/*  grid-row: 9;*/
+/*}*/
+
+/*#view-format-label {*/
+/*  grid-column-end: span 1;*/
+/*}*/
+
+/*#view-format-value-col1, #view-format-value-col2, #view-format-value-col3 {*/
+/*  grid-column-end: span 3;*/
+/*}*/
+
+/*.buttons {*/
+/*  grid-row: 10;*/
+/*}*/
+
+/*#buttons-submit {*/
+/*  grid-column-end: span 3;*/
+/*}*/
+
+/*#buttons-reset {*/
+/*  grid-column-end: span 3;*/
+/*}*/
+
+#batting-record-limit > label {
+  padding-right: 0.5rem;
 }
 
 #homeoraway-value label {
@@ -52,87 +181,19 @@
 }
 
 #homeoraway-value label:nth-child(1) {
-  padding-left: 0px;
+  padding-left: 0;
 }
 
-#homeoraway-label {
-  grid-column-start: 1;
+#homeoraway-value label:nth-child(5) {
+  padding-left: 0;
 }
 
-#homeoraway-value {
-  grid-column-start: 2;
-  grid-column-end: span 7;
-}
-
-.country-ground-row {
-  grid-row-start: 5;
-}
-
-#batting-record-homeaway-label {
-  grid-column-end: span 1;
-}
-
-#batting-record-homeaway {
-  grid-column-end: span 2;
-}
-
-#batting-record-country-grounds-label {
-  grid-column-start: 5;
-}
-
-
-#batting-record-country-grounds {
-  grid-column-start: 6;
-  grid-column-end: span 2;
-}
-
-.daterange {
-  grid-row-start: 6;
-  align-self: center;
+#batting-record-country-grounds > select {
+  max-width: 12.5em;
 }
 
 #daterange-label {
-  grid-column-end: span 1;
-}
-
-#startdate-label > label, #enddate-label > label {
-  /*padding-top: 5px;*/
-}
-
-#startdate > input, #enddate > input {
-  padding-bottom: 5px;
-}
-
-#startdate-label {
-  grid-column-end: span 1;
-}
-
-#startdate {
-  grid-column-end: span 2;
-}
-
-#enddate-label {
-  grid-column-end: span 1;
-}
-
-#enddate {
-  grid-column-end: span 2;
-}
-
-.season {
-  grid-row-start: 7;
-}
-
-#season-label {
-  grid-column-end: span 1;
-}
-
-#season-value {
-  grid-column-end: span 2;
-}
-
-.result {
-  grid-row-start: 8;
+  display: none;
 }
 
 .result label {
@@ -140,42 +201,276 @@
   padding-right: 15px;
 }
 
-.result label:nth-child(1) {
-}
-
-
-#result-label {
-  grid-column-end: span 1;
-}
-
-#result-value {
-  grid-column-end: span 7;
-}
-
-.view-format {
-  grid-row-start: 9;
-}
-
-#view-format-label {
-  grid-column-end: span 1;
-}
-
 #view-format-value-col1, #view-format-value-col2, #view-format-value-col3 {
-  grid-column-end: span 3;
+  grid-column: 2;
 }
 
-.buttons {
-  grid-row-start: 10;
+@media screen and (min-width: 700px) {
+  .batting-record {
+    grid-template-columns: repeat(2, 1fr 3fr);
+  }
+
+  .homeoraway-row {
+    grid-row: 4;
+  }
+
+
+  .country-ground-row {
+    grid-row-start: 5;
+  }
+
+  .daterange {
+    grid-row: 6;
+    align-self: center;
+  }
+
+  #startdate > input, #enddate > input {
+    padding-bottom: 5px;
+  }
+
+  .season {
+    grid-row: 7;
+  }
+
+  .result {
+    grid-row: 8;
+  }
+
+  #result-value {
+    grid-column-end: span 2;
+  }
+
+  .view-format {
+    grid-row: 9;
+  }
+
+  #view-format-value-col1 {
+    grid-column: 2;
+  }
+
+  #view-format-value-col2 {
+    grid-column-start: 4;
+  }
+
+  #view-format-value-col3 {
+    grid-row: 10;
+    grid-column: 2;
+  }
+
+  .buttons {
+    grid-row: 11;
+  }
+
 }
 
-#buttons-submit {
-  grid-column-end: span 3;
-}
+/*@media screen and (min-width: 1200px) {*/
 
-#buttons-reset {
-  grid-column-end: span 3;
-}
+/*  .batting-record {*/
+/*    grid: auto-flow min-content/repeat(12, 1fr);*/
+/*  }*/
 
-#batting-record-limit > label {
-  padding-right: 0.5rem;
+/*  #homeoraway-value {*/
+/*    grid-column: 2/ span 3;*/
+/*  }*/
+
+/*  #homeoraway-value label {*/
+/*    padding-left: 15px;*/
+/*    padding-right: 5px;*/
+/*  }*/
+
+/*  #homeoraway-value label:nth-child(5) {*/
+/*    padding-left: 5px;*/
+/*  }*/
+
+
+/*  #view-format-label {*/
+/*    grid-column-end: span 1;*/
+/*  }*/
+
+/*  #view-format-value-col1, #view-format-value-col2, #view-format-value-col3 {*/
+/*    grid-column-end: span 3;*/
+/*  }*/
+
+/*}*/
+
+@media screen and (min-width: 1800px) {
+  .batting-record {
+    grid: auto-flow min-content/repeat(12, 1fr);
+  }
+
+  .filter-row {
+    grid-row: 2;
+    grid-column: 1/-1;
+  }
+
+  #batting-record-limit {
+    grid-column-start: 6;
+    grid-column-end: span 3;
+  }
+
+  #batting-record-limit > label {
+    padding-right: 0.5rem;
+  }
+
+  .record-search-header {
+    grid-row: 1;
+    grid-column: 1/-1;
+  }
+
+  .teamrow {
+    grid-row: 3;
+  }
+
+  #batting-record-team-label {
+    grid-column: 1;
+  }
+
+  #batting-record-teams {
+    grid-column: 2/ span 2;
+  }
+
+  #batting-record-opposition-label {
+    grid-column: 5;
+  }
+
+  #batting-record-opposition {
+    grid-column: 6/ span 2;
+  }
+
+  .homeoraway-row {
+    grid-row: 4;
+  }
+
+  #homeoraway-value label {
+    padding-left: 15px;
+    padding-right: 5px;
+  }
+
+  #homeoraway-value label:nth-child(1) {
+    padding-left: 0;
+  }
+
+  #homeoraway-value label:nth-child(5) {
+    padding-left: 5px;
+  }
+
+  #homeoraway-label {
+    grid-column: 1;
+  }
+
+  #homeoraway-value {
+    grid-column: 2/ span 7;
+  }
+
+  .country-ground-row {
+    grid-row: 5;
+  }
+
+  #batting-record-homeaway-label {
+    grid-column-end: span 1;
+  }
+
+  #batting-record-homeaway {
+    grid-column-end: span 2;
+  }
+
+  #batting-record-country-grounds-label {
+    grid-column: 5;
+  }
+
+
+  #batting-record-country-grounds {
+    grid-column: 6/ span 2;
+  }
+
+  .daterange {
+    grid-row: 6;
+    align-self: center;
+  }
+
+  #daterange-label {
+    grid-column-end: span 1;
+  }
+
+  #startdate-label > label, #enddate-label > label {
+    /*padding-top: 5px;*/
+  }
+
+  #startdate > input, #enddate > input {
+    padding-bottom: 5px;
+  }
+
+  #startdate-label {
+    grid-column-end: span 1;
+  }
+
+  #startdate {
+    grid-column-end: span 2;
+  }
+
+  #enddate-label {
+    grid-column-end: span 1;
+  }
+
+  #enddate {
+    grid-column-end: span 2;
+  }
+
+  .season {
+    grid-row: 7;
+  }
+
+  #season-label {
+    grid-column-end: span 1;
+  }
+
+  #season-value {
+    grid-column-end: span 2;
+  }
+
+  .result {
+    grid-row: 8;
+  }
+
+  .result label {
+    padding-left: 5px;
+    padding-right: 15px;
+  }
+
+  .result label:nth-child(1) {
+  }
+
+
+  #result-label {
+    grid-column-end: span 1;
+  }
+
+  #result-value {
+    grid-column-end: span 7;
+  }
+
+  .view-format {
+    grid-row: 9;
+  }
+
+  #view-format-label {
+    grid-column-end: span 1;
+  }
+
+  #view-format-value-col1, #view-format-value-col2, #view-format-value-col3 {
+    grid-column-end: span 3;
+  }
+
+  .buttons {
+    grid-row: 10;
+  }
+
+  #buttons-submit {
+    grid-column-end: span 3;
+  }
+
+  #buttons-reset {
+    grid-column-end: span 3;
+  }
+
 }
