--- a/AcsStatsWeb/ClientApp/src/app/modules/bowling-records/components/get-bowling-records/get-bowling-records.component.css
+++ b/AcsStatsWeb/ClientApp/src/app/modules/bowling-records/components/get-bowling-records/get-bowling-records.component.css
@@ -7,47 +7,39 @@
 }
 
 #bowling-record-limit {
-  grid-column-start: 4;
   grid-column-end: span 2;
 }
 .record-search-header {
-  grid-row-start: 1;
-  grid-column-start: 1;
-  grid-column-end: -1;
+  grid-row: 1;
+  grid-column: 1/ -1;
 }
 
 #bowling-record-select {
   grid-column-end: span 2;
 }
 
-#bowling-record-limit {
-  grid-column-start: 6;
-}
-
 .teamrow {
-  grid-row-start: 3;
+  grid-row: 3;
 }
 
 #bowling-record-team-label {
-  grid-column-start: 1;
+  grid-column: 1;
 }
 
 #bowling-record-teams {
-  grid-column-start: 2;
-  grid-column-end: span 2;
+  grid-column: 2/ span 2;
 }
 
 #bowling-record-opposition-label {
-  grid-column-start: 5;
+  grid-column: 5;
 }
 
 #bowling-record-opposition {
-  grid-column-start: 6;
-  grid-column-end: span 2;
+  grid-column: 6/ span 2;
 }
 
 .homeoraway-row {
-  grid-row-start: 4;
+  grid-row: 4;
 }
 
 #homeoraway-value label {
@@ -60,16 +52,15 @@
 }
 
 #homeoraway-label {
-  grid-column-start: 1;
+  grid-column: 1;
 }
 
 #homeoraway-value {
-  grid-column-start: 2;
-  grid-column-end: span 7;
+  grid-column: 2/ span 7;
 }
 
 .country-ground-row {
-  grid-row-start: 5;
+  grid-row: 5;
 }
 
 #bowling-record-homeaway-label {
@@ -81,17 +72,16 @@
 }
 
 #bowling-record-country-grounds-label {
-  grid-column-start: 5;
+  grid-column: 5;
 }
 
 
 #bowling-record-country-grounds {
-  grid-column-start: 6;
-  grid-column-end: span 2;
+  grid-column: 6/ span 2;
 }
 
 .daterange {
-  grid-row-start: 6;
+  grid-row: 6;
   align-self: center;
 }
 
@@ -100,7 +90,6 @@
 }
 
 #startdate-label > label, #enddate-label > label {
-  /*padding-top: 5px;*/
 }
 
 #startdate > input, #enddate > input {
@@ -124,7 +113,7 @@
 }
 
 .season {
-  grid-row-start: 7;
+  grid-row: 7;
 }
 
 #season-label {
@@ -136,7 +125,7 @@
 }
 
 .result {
-  grid-row-start: 8;
+  grid-row: 8;
 }
 
 .result label {
@@ -157,7 +146,7 @@
 }
 
 .view-format {
-  grid-row-start: 9;
+  grid-row: 9;
 }
 
 #view-format-label {
@@ -169,7 +158,7 @@
 }
 
 .buttons {
-  grid-row-start: 10;
+  grid-row: 10;
 }
 
 #buttons-submit {
