--- a/AcsStatsWeb/ClientApp/src/styles.css
+++ b/AcsStatsWeb/ClientApp/src/styles.css
@@ -33,15 +33,6 @@ body {
   background-color: rgb(246, 247, 248);
 }
 
-app-root {
-  display: grid;
-  grid-template-columns: repeat(12, auto);
-}
-
-app-root > app-header, app-root > app-nav-menu, app-root > main {
-  grid-column-start: 1;
-  grid-column-end: -1;
-}
 
 
 @media (min-width: 768px) {
@@ -141,15 +132,6 @@ input[type=checkbox], input[type=radio] {
   font-size: 1rem;
   border-radius: .25rem;
   transition: color .15s
-}
-
-.scorecard-container {
-  display: grid;
-  grid-template-columns: [first] 15rem auto 15rem;
-  column-gap: 1rem;
-  grid-column-start: 1;
-  grid-column-end: -1;
-  font-size: 0.8rem;
 }
 
 
@@ -464,24 +446,6 @@ section.searchResultHeader span {
   display: inline-block
 }
 
-.selectrow {
-  grid-row-start: 2;
-}
-
-#batting-record-select {
-  grid-column-end: span 2;
-}
-
-.app-search {
-  grid-column: 1/6;
-  display: grid;
-  /*grid-template-columns: repeat(12, 1fr);*/
-
-  grid: auto-flow min-content/repeat(3, 1fr);
-  gap: 1rem;
-  row-gap: 1.5rem;
-}
-
 
 .bg-brand-green-500 {
   --tw-bg-opacity: 1;
@@ -496,4 +460,8 @@ section.searchResultHeader span {
 select {
   padding: 0.1rem;
   max-width: 20rem;
+}
+
+.form-control {
+  width: auto;
 }
