--- a/AcsStatsWeb/ClientApp/src/styles.css
+++ b/AcsStatsWeb/ClientApp/src/styles.css
@@ -496,3 +496,11 @@ section.searchResultHeader span {
 select {
   padding: 0.1rem;
 }
+
+.ng-valid[required], .ng-valid.required  {
+  border-left: 5px solid #42A948; /* green */
+}
+
+.ng-invalid[required] {
+  border-left: 5px solid #a94442; /* green */
+}
