Added a more responsive UI

--- a/AcsStatsWeb/ClientApp/src/app/components/nav-menu/nav-menu.component.html
+++ b/AcsStatsWeb/ClientApp/src/app/components/nav-menu/nav-menu.component.html
@@ -1,11 +1,10 @@
 <header>
-  <nav
-    class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow bg-brand-green-700">
-    <div class="container">
-      <div
-        class="navbar-collapse collapse d-sm-inline-flex justify-content-start"
-        [ngClass]="{ show: isExpanded }"
-      >
+  <nav class="navbar navbar-dark navbar-expand-md navbar-light border-bottom box-shadow bg-brand-green-700">
+    <div class="container-fluid">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="navbar-collapse collapse justify-content-start" id="navbarNav">
         <ul class="navbar-nav flex-grow">
           <li
             class="nav-item"
