--- a/AcsStatsWeb/ClientApp/src/grid.css
+++ b/AcsStatsWeb/ClientApp/src/grid.css
@@ -1,29 +1,7 @@
 
-/*app-search-header {*/
-/*  grid-row-start: 2;*/
-/*  grid-column: 1/6;*/
-/*  display: grid;*/
-/*  grid: auto-flow min-content/repeat(3, 1fr);*/
-/*  gap: 1rem;*/
-/*  row-gap: 1.5rem;*/
-/*}*/
-
-/*.limit {*/
-/*  grid-row-start: 2;*/
-/*}*/
-
-/*.scorecard-container {*/
-/*  display: grid;*/
-/*  grid-template-columns: [first] 15rem auto 15rem;*/
-/*  column-gap: 1rem;*/
-/*  grid-column-start: 1;*/
-/*  grid-column-end: -1;*/
-/*  font-size: 0.8rem;*/
-/*}*/
-
 .scorecard-container {
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: 1rem 1fr 1rem ;
   column-gap: 1rem;
   grid-column-start: 1;
   grid-column-end: -1;
@@ -61,36 +39,322 @@ app-search-header {
   grid-column: 1/-1;
 }
 
+.record {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  gap: 1rem;
+  row-gap: 1.5rem;
+  margin: 1rem;
+}
 
-/*@media screen and (min-width: 1200px) {*/
-/*  .batting-record {*/
-/*    grid-template-columns: repeat(2, 1fr 3fr);*/
-/*  }*/
+#record-limit > label {
+  padding-right: 0.5rem;
+}
 
-/*  app-search-header {*/
-/*    grid-column: 1/6;*/
-/*    display: grid;*/
-/*    grid: auto-flow min-content/repeat(3, 1fr);*/
-/*    gap: 1rem;*/
-/*    row-gap: 1.5rem;*/
-/*  }*/
+#homeoraway-value label {
+  padding-left: 15px;
+  padding-right: 5px;
+}
 
-/*}*/
+#homeoraway-value label:nth-child(1) {
+  padding-left: 0;
+}
+
+#homeoraway-value label:nth-child(5) {
+  padding-left: 15px;
+}
+
+#record-country-grounds > select {
+  max-width: 12.5em;
+}
+
+#daterange-label {
+  display: none;
+}
+
+.result label {
+  padding-left: 5px;
+  padding-right: 15px;
+}
+
+#view-format-value-col1, #view-format-value-col2, #view-format-value-col3 {
+  grid-column: 2;
+}
+
+@media screen and (min-width: 700px) {
+  .record {
+    grid-template-columns: repeat(2, 1fr 3fr);
+  }
+
+  .homeoraway-row {
+    grid-row: 4;
+  }
 
 
+  .country-ground-row {
+    grid-row-start: 5;
+  }
+
+  .daterange {
+    grid-row: 6;
+    align-self: center;
+  }
+
+  #startdate > input, #enddate > input {
+    padding-bottom: 5px;
+  }
+
+  #homeoraway-value {
+    grid-column-end: span 3;
+  }
+
+  .season {
+    grid-row: 7;
+  }
+
+  .result {
+    grid-row: 8;
+  }
+
+  #result-value {
+    grid-column-end: span 2;
+  }
+
+  .view-format {
+    grid-row: 9;
+  }
+
+  #view-format-value-col1 {
+    grid-column: 2;
+  }
+
+  #view-format-value-col2 {
+    grid-column-start: 4;
+  }
+
+  #view-format-value-col3 {
+    grid-row: 10;
+    grid-column: 2;
+  }
+
+  .buttons {
+    grid-row: 11;
+  }
+}
 
 @media screen and (min-width: 1200px) {
   .scorecard-container {
-    grid-template-columns: [first] 15rem auto;
+    grid-template-columns: [first] 15rem auto 2rem;
   }
 
-  /*app-search-header {*/
-  /*  grid-column: 1/6;*/
-  /*  display: grid;*/
-  /*  grid: auto-flow min-content/repeat(3, 1fr);*/
-  /*  gap: 1rem;*/
-  /*  row-gap: 1.5rem;*/
-  /*}*/
+  app-search-header {
+    grid-column: 1/4;
+  }
+
+
+  #record-limit {
+    grid-column-start: 4;
+  }
+
+  #homeoraway-value {
+    grid-column: 2/ span 3;
+  }
+
+  #homeoraway-value label {
+    padding-left: 15px;
+    padding-right: 5px;
+  }
+
+  .homeoraway-row {
+    grid-row: 3;
+  }
+
+  .country-ground-row {
+    grid-row: 4;
+  }
+
+  .daterange {
+    grid-row: 5;
+  }
+
+  .season {
+    grid-row: 6;
+  }
+
+  .result {
+    grid-row: 7;
+  }
+
+  .view-format {
+    grid-row: 8;
+  }
+
+  .buttons {
+    grid-row: 9;
+  }
+
+}
+
+@media screen and (min-width: 1700px) {
+  .scorecard-container {
+    grid-template-columns: [first] 15rem auto 15rem;
+  }
+
+  app-search-header {
+    grid-column: 1/7;
+    display: grid;
+    grid: auto-flow min-content/repeat(3, 1fr);
+    gap: 1rem;
+    row-gap: 1.5rem;
+  }
+
+  .record {
+    grid: auto-flow min-content/repeat(12, 1fr);
+  }
+
+  .filter-row {
+    grid-column: 1/-1;
+  }
+
+  #record-limit {
+    grid-column-start: 7;
+    grid-column-end: span 3;
+  }
+
+  #record-limit > label {
+    padding-right: 0.5rem;
+  }
+
+  .record-search-header {
+    grid-column: 1/-1;
+  }
+
+  #record-team-label {
+    grid-column: 1;
+  }
+
+  #record-teams {
+    grid-column: 2/ span 2;
+  }
+
+  #record-opposition-label {
+    grid-column: 5;
+  }
+
+  #record-opposition {
+    grid-column: 6/ span 2;
+  }
+
+
+  #homeoraway-value label {
+    padding-left: 15px;
+    padding-right: 5px;
+  }
+
+  #homeoraway-value label:nth-child(1) {
+    padding-left: 0;
+  }
+
+  #homeoraway-value label:nth-child(5) {
+    padding-left: 15px;
+  }
+
+  #homeoraway-label {
+    grid-column: 1;
+  }
+
+  #homeoraway-value {
+    grid-column: 2/ span 7;
+  }
+
+  #record-homeaway-label {
+    grid-column-end: span 1;
+  }
+
+  #record-homeaway {
+    grid-column-end: span 2;
+  }
+
+  #record-country-grounds-label {
+    grid-column: 5;
+  }
+
+  #record-country-grounds {
+    grid-column: 6/ span 2;
+  }
+
+  .daterange {
+    align-self: center;
+  }
+
+  #daterange-label {
+    grid-column-end: span 1;
+  }
+
+  #startdate > input, #enddate > input {
+    padding-bottom: 5px;
+  }
+
+  #startdate-label {
+    grid-column-end: span 1;
+  }
+
+  #startdate {
+    grid-column-end: span 2;
+  }
+
+  #enddate-label {
+    grid-column-end: span 1;
+  }
+
+  #enddate {
+    grid-column-end: span 2;
+  }
+
+  #season-label {
+    grid-column-end: span 1;
+  }
+
+  #season-value {
+    grid-column-end: span 2;
+  }
+
+  .result label {
+    padding-left: 5px;
+    padding-right: 15px;
+  }
+
+  .result label:nth-child(1) {
+  }
+
+
+  #result-label {
+    grid-column-end: span 1;
+  }
+
+  #result-value {
+    grid-column-end: span 7;
+  }
+
+  #view-format-label {
+    grid-column-end: span 1;
+  }
+
+  #view-format-value-col1, #view-format-value-col2, #view-format-value-col3 {
+    grid-column-end: span 3;
+  }
+
+  #view-format-value-col3 {
+    grid-row-start: 8;
+    grid-column-start: 6;
+  }
+  #buttons-submit {
+    grid-column-end: span 3;
+  }
+
+  #buttons-reset {
+    grid-column-end: span 3;
+  }
 
 }
 
