--- a/AcsStatsWeb/ClientApp/src/app/modules/shared/components/paging/paging.component.css
+++ b/AcsStatsWeb/ClientApp/src/app/modules/shared/components/paging/paging.component.css
@@ -21,7 +21,7 @@ nav > ul > input {
 button {
   background-color: rgb(33, 97, 4);
   color: white;
-  margin-left: -6px;
+  margin-left: -4px;
   padding: 0.375rem .75rem;
 }
 
@@ -41,8 +41,9 @@ button {
   display: block;
   border-top: none;
   border-bottom: none;
-  border-left: 1px solid  rgb(25, 73, 32);
-  border-right: 1px solid  rgb(25, 73, 32);
+  /*border-left: 1px solid  rgb(25, 73, 32);*/
+  /*border-right: 1px solid  rgb(25, 73, 32);*/
+  border-style: none;
 }
 
 .item-left {
@@ -56,8 +57,8 @@ button {
 .item-disabled {
   background-color: rgba(33, 97, 4, 50%);
   color: lightgray;
-  border-left: 1px solid  rgba(25, 73, 32, 50%);
-  border-right: 1px solid  rgba(25, 73, 32, 50%);
+  /*border-left: 1px solid  rgba(25, 73, 32, 50%);*/
+  /*border-right: 1px solid  rgba(25, 73, 32, 50%);*/
 }
 
 .item-goto {
@@ -67,6 +68,10 @@ button {
 .button-right {
   text-align: right !important;
   padding-right: 0.3em;
+}
+
+#next-button {
+  margin: 0;
 }
 
 .button-left {
